--- a/primer-parcial.tex
+++ b/primer-parcial.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
     \item $v^tuu^tv = (u^tv)^2$
     \item Si $x^tx=0 \Rightarrow x = 0$
-    \item \colorbox{Salmon}{$AB \neq BA$}
+    \item {$AB \neq BA$}
     \item $C(A+B) = CA + CB$
     \item Regla general multiplicación $AB$: \\
     $ \begin{pmatrix}
@@ -53,13 +53,13 @@ Ab_1 & Ab_2 & Ab_3
     \item $(A^t)^{-1} = (A^{-1})^t$
     \item $(kA)^{-1} = k^{-1} A^{-1}$, $k\in\mathbb{R}$
     \item Sea $A$ matriz triangular, es inversible si los elementos de la diagonal son distintos de cero. 
-    \item La inversa de una matriz triangular superior es triangular \colorbox{Dandelion}{superior}, y viceversa
-    \item \colorbox{Dandelion}{Si A es estrictamente diagonal dominante entonces es \textbf{inversible}}
-    \item \colorbox{Salmon}{\textbf{NO VALE} que $(A+B)^{-1} = A^{-1} + B^{-1}$}
+    \item La inversa de una matriz triangular superior es triangular {superior}, y viceversa
+    \item {Si A es estrictamente diagonal dominante entonces es \textbf{inversible}}
+    \item {\textbf{NO VALE} que $(A+B)^{-1} = A^{-1} + B^{-1}$}
     \end{itemize}
     \item Matriz traspuesta
     \begin{itemize}
-        \item \colorbox{LimeGreen}{\textbf{SI VALE} que $(A+B)^t = A^t + B^t$}
+        \item {\textbf{SI VALE} que $(A+B)^t = A^t + B^t$}
         \item $(AB)^t = B^tA^t$
     \end{itemize}
     \item Traza
@@ -75,7 +75,7 @@ Ab_1 & Ab_2 & Ab_3
         \item $det(A) = det(A^t)$
         \item $det(A^{-1}) = (det(A))^{-1} \iff A$ es inversible
         \item $det(A) = \prod_{i=1}^{n}a_{ii} \iff A$ es triangular 
-        \item \colorbox{Gray}{Si $A \in \mathbb{R}^{nxn} \Rightarrow$} $det(kA) = k^ndet(A)$ -- Chequear qué pasa si A no es cuadrada.
+        \item {Si $A \in \mathbb{R}^{nxn} \Rightarrow$} $det(kA) = k^ndet(A)$ -- Chequear qué pasa si A no es cuadrada.
         \item $A \in \mathbb{R}^{2x2} \Rightarrow A^{-1} = \frac{1}{det(A)} \begin{pmatrix}
                         d & -b\\
                         -c & a
